# zero2hundred

./: .gitignore  LICENSE  README.md  pyproject.toml
src/zero2hundred/: __init__.py  __main__.py  cli.py  config.py  errors.py  events.py  frames.py  media.py  paths.py  picker.py  progress.py  render.py  timecode.py  ui.py
src/zero2hundred/detect/: __init__.py  evaluate.py  launch.py  needle.py  video.py
tests/: test_cli.py  test_config.py  test_detect_evaluate.py  test_detect_launch.py  test_detect_needle.py  test_detect_video.py  test_events.py  test_frames.py  test_media.py  test_paths.py  test_picker.py  test_progress.py  test_render.py  test_timecode.py  test_ui.py
